objects/vlocity_ins__DocumentTemplate__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_ins__ApplicableItemTypes__c</fullName>
        <description>The type of SFDC objects (lines) the Template is applicable to</description>
        <label>Applicable Item Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ContractLineItem__c</fullName>
                </value>
                <value>
                    <fullName>OpportunityLineItem</fullName>
                </value>
                <value>
                    <fullName>OrderItem</fullName>
                </value>
                <value>
                    <fullName>QuoteLineItem</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__ApplicableTypes__c</fullName>
        <description>The type of SFDC objects (headers) the Template is applicable to</description>
        <label>Applicable Objects</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>Quote</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__ContractTypes__c</fullName>
        <description>Contract types that the template is restricted to</description>
        <label>Contract Types</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CustomClassName__c</fullName>
        <label>Custom Class</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DataExtractDRBundleName__c</fullName>
        <label>Data Extract DR Bundle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DisplayUnmappedTokens__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Unmapped Tokens</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DocumentFontStyle__c</fullName>
        <description>The default font style of the template</description>
        <label>Document Font Style</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DocumentGenerationMechanism__c</fullName>
        <label>Document Generation Mechanism</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                    <default>true</default>
                    <label>Default</label>
                </value>
                <value>
                    <fullName>VlocityClientSide</fullName>
                </value>
                <value>
                    <fullName>VlocityCloud</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__ExternalID__c</fullName>
        <description>Internally used string used for migrating a template between different SFDC orgs</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ExtractEmbeddedTemplateTokens__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Extract Embedded Template Tokens</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__HasBatchableSections__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Batchable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denoted if the document template is active</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsPublished__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, indicates that the template is already published on Off-Platform Service</description>
        <label>Is Published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsSignatureRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If document created from this template needs to be signed</description>
        <label>Is Signature Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LastSectionKey__c</fullName>
        <label>LastSectionKey</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LocaleCode__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>vlocity_ins__VlocityLocaleCode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__MappingMethodType__c</fullName>
        <label>Mapping Method Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DataRaptor</fullName>
                </value>
                <value>
                    <fullName>CustomClass</fullName>
                    <label>Custom Class</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__MappingType__c</fullName>
        <label>Mapping Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>JSON Based</fullName>
                </value>
                <value>
                    <fullName>Object Based</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__PdfGenerationMechanism__c</fullName>
        <label>PDF Generation Mechanism</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                    <default>true</default>
                    <label>Default</label>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>VlocityClientSide</fullName>
                </value>
                <value>
                    <fullName>VlocityCloud</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__PublishedTemplateId__c</fullName>
        <description>The associated tempalte identifier on Off-Platform Service</description>
        <label>Published Template Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SectionHeadersDisplayStyle__c</fullName>
        <description>Section header display style</description>
        <label>Section Headers Display Style</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SectionHeadersFontStyle__c</fullName>
        <description>Section header font style</description>
        <label>Section Headers Font Style</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Status__c</fullName>
        <description>Document Template status</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__TemplateContentDocumentId__c</fullName>
        <label>Content Document Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TemplateContentFormat__c</fullName>
        <label>Template Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Vlocity Web Template</fullName>
                    <default>true</default>
                    <label>Vlocity Web Template</label>
                </value>
                <value>
                    <fullName>Microsoft Word .DOCX Template</fullName>
                </value>
                <value>
                    <fullName>Microsoft Powerpoint .PPTX Template</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__TemplateContentVersionId__c</fullName>
        <label>Content Version Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TokenDRBundleName__c</fullName>
        <label>Token DR Bundle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TokenData__c</fullName>
        <description>Token Data</description>
        <label>Token Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TrackContractRedlines__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether redlines will be tracked on documents created from this template</description>
        <label>Track Contract Redlines</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Type__c</fullName>
        <description>Type of document template</description>
        <label>Template Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Proposal</fullName>
                </value>
                <value>
                    <fullName>Agreement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__UsageType__c</fullName>
        <label>Usage Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>Asset</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__VersionNumber__c</fullName>
        <description>Version number</description>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__WMLRelationshipMetadata__c</fullName>
        <label>WML Relationship Metadata</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__WordDocumentTemplate__c</fullName>
        <label>Word Document Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Document Template</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>